<resources>
    <string name="app_name">DizTudo_app</string>
    <string name="nome_app">DizTudo!</string>
    <string name="descri"> Playlist para você estudar em qualquer lugar </string>
    <string name="btn_exatas"> EXATAS </string>
    <string name="btn_humanas"> HUMANAS </string>
    <string name="btn_lin"> LINGUAGENS </string>
    <string name="btn_cien"> CIÊNCIAS </string>
    <string name="nome_exatas">EXATAS!</string>
    <string name="desc_exatas">As melhores de Matemática e Física.</string>
    <string name="music1_exatas">Fração</string>
    <string name="music2_exatas">GEOMETRIA</string>
    <string name="music3_exatas">LOGARITMO</string>
    <string name="music4_exatas">HIPOTENUSA</string>
    <string name="music5_exatas">TRIGONOMETRIA</string>
    <string name="music6_exatas">EXPRESSÃO NUMÉRICA</string>
    <string name="music7_exatas">DIVISIBILIDADE</string>
    <string name="botao_de_portugues">botao_de_portugues</string>
    <string name="botao_de_ciencias">botao_de_ciencias</string>
    <string name="botao_de_filo">botao_de_filo</string>
    <string name="botao_de_historia">botao_de_historia</string>
    <string name="botao_de_matematica">botao_de_matematica</string>
    <string name="portugu_s">Português</string>

</resources>