<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/elipsediztudo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="189dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="510dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nome_app"
        android:layout_width="222dp"
        android:layout_height="65dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/nome_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/descri"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="385dp"
        android:fontFamily="@font/inter"
        android:text="@string/descri"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_app" />

    <Button
        android:id="@+id/btn_exatas"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#FF2C69"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_exatas"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#CF144F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descri" />

    <Button
        android:id="@+id/btn_humanas"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="213dp"
        android:backgroundTint="#FFA927"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_humanas"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exatas" />

    <Button
        android:id="@+id/btn_lin"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="#1EA49D"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_lin"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_humanas" />

    <Button
        android:id="@+id/btn_cien"
        android:layout_width="311dp"
        android:layout_height="69dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="38dp"
        android:backgroundTint="#0CBE65"
        android:fontFamily="@font/inter_bold"
        android:text="@string/btn_cien"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lin" />
</androidx.constraintlayout.widget.ConstraintLayout>